Task5/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: crud-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: crud-py-app
    template:
       metadata:
          labels:
             app: crud-py-app
       spec:
          containers:
          - name: crud-py
            image: russianbear107/user_crud:1.0
            ports:
              - name: web 
                containerPort: 80
