Task5/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
spec:
  selector:
    app: crud-py-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
